fixing text overflow in my story page, and working with slight color changes for navbar for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -35,19 +35,3 @@
   background-color: #fb860085;
   color: bisque;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
